--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.0",
+    "@radix-ui/react-radio-group": "^1.0.0",
     "local-data-storage": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
